# Hivemind

./: .gitignore  CODEOWNERS  CRATES.md  Cargo.toml  Makefile  PARITY_STATUS.md  README.md  architecture.md  build.rs  changelog.json  plan-merge-prepare-third-pass-refactor.md  plan-tick-flow-once-third-pass-refactor.md
.github/workflows/: ci.yml  publish-crates.yml  publish-docs.yml  release.yml
docs/architecture/: architecture.md  cli-capabilities.md  hivemind_cli_capability_specification.md  hivemind_commit_branch_model.md  hivemind_event_model.md  hivemind_prd_v_0.md  hivemind_runtime_adapters.md  hivemind_scope_model.md  hivemind_state_model.md  hivemind_task_flow.md  runtime-adapters.md
docs/design/: cli-operational-semantics.md  cli-semantics.md  codegraph-db-schema.md  error-model.md  event-replay-semantics.md  multi-repo-integration.md  retry-context.md  runtime-wrapper-mechanics.md  verification-authority.md
docs/overview/: prd.md  principles.md  quickstart.md
hivemind-test/: .gitignore  sprint_64_manual_checklist.md  sprint_64_manual_report.md  sprint_65_manual_checklist.md  sprint_65_manual_report.md  sprint_66_manual_checklist.md  sprint_66_manual_report.md  sprint_67_manual_checklist.md  sprint_67_manual_report.md  sprint_68_manual_checklist.md  sprint_68_manual_report.md  sprint_69_manual_checklist.md  sprint_69_manual_report.md  sprint_70_manual_checklist.md  sprint_70_manual_report.md  test-plan.md  test_deep_prompt_provenance_flow.sh  test_execution.sh  test_merge.sh  test_native_openrouter_beta_api.sh  test_phase_4_5_native_runtime_beta.sh  test_runtime_projection.sh  test_runtime_projection_real_codex.sh  test_runtime_projection_real_opencode.sh  test_runtime_restore_turn_real_codex.sh  test_runtime_restore_turn_real_opencode.sh  test_sprint_58_native_runtime.sh  test_sprint_59_graph_benchmark.sh  test_sprint_59_graph_runtime.sh  test_worktree.sh
hivemind-test/test-report/: 2026-02-20-sprint46-depth-bound.json  2026-02-20-sprint46-graph-query-determinism.json  2026-02-20-sprint46-graph-query-event-slice.json  2026-02-28-native-openrouter-beta-api-report.md  2026-03-06-native-openrouter-beta-api-report.md  2026-03-06-phase45-native-runtime-beta-report.md  2026-03-06-phase45-native-runtime-flow1-events.json  2026-03-06-phase45-native-runtime-flow2-events.json  2026-03-06-phase45-native-runtime-project-events.json  2026-03-07-sprint58-analysis.json  2026-03-07-sprint58-attempt-context.json  2026-03-07-sprint58-flow1-events.json  2026-03-07-sprint58-flow1-native-summary.json  2026-03-07-sprint58-flow2-events.json  2026-03-07-sprint58-flow2-native-summary.json  2026-03-07-sprint58-flow3-events.json  2026-03-07-sprint58-flow3-native-summary.json  2026-03-07-sprint58-native-runtime-report.md  2026-03-10-sprint59-graph-runtime-report.md  FINAL-BETA-TEST-REPORT.md  sprint-35-manual-checklist.md  sprint-35-manual-report.md  sprint-36-manual-checklist.md  sprint-36-manual-report.md  sprint-37-manual-checklist.md  sprint-37-manual-report.md  sprint-38-manual-checklist.md  sprint-38-manual-report.md  sprint-39-manual-checklist.md  sprint-39-manual-report.md  sprint-40-manual-checklist.md  sprint-40-manual-report.md  sprint-41-5-manual-checklist.md  sprint-41-5-manual-report.md  sprint-41-manual-checklist.md  sprint-41-manual-report.md  sprint-44-manual-checklist.md  sprint-44-manual-report.md  sprint-46-manual-checklist.md  sprint-46-manual-report.md  (+16 more)
ops/: ROADMAP.md  landing-content.txt  registry_refactor_checklist.md
ops/cli_migration/: main_cli_handler_migration_report.json
ops/ideaspace/: agent-interface.md  notes-10-02.md  notes-deliverables-skills-agents-task-autorun.md  ssh.md  stout-hivemin-event-projection.md
ops/migration_graphs/: event_store_rs.deps.json  events_rs.deps.json  flow_rs.bundle.rs.txt  flow_rs.deps.json  governance_rs.bundle.rs.txt  governance_rs.deps.json  server_rs.deps.json  tool_engine_rs.deps.json
ops/non-phase-work/: architecture-refactor-map-2026-03-06.md
ops/process/: README.md  beta-testing-fix-report-template.md  phase-4-sprint-execution.md  phase-execution.md  phase-report-template.md  sprint-execution.md  sprint-report-template.md
ops/registry_migration/: registry_methods_report.json  split_checklist.md
ops/reports/: .gitkeep  architecture-audit-solid-2026-03-06.md  beta-testing-fix-cli-contract-hardening-2026-02-10.md  beta-testing-fix-cli-contract-hardening.md  beta-testing-fix-phase25-stabilization.md  beta-testing-fix-report-template.md  beta-testing-fix-runtime-configuration-2026-02-15.md  beta-testing-fix-sprint25-stabilization.md  beta-testing-fix-tier-0-2-beta-gaps.md  beta-testing-fix-tier11-plus-governance-observability-2026-02-19.md  beta-testing-fix-tier12-16-cli-compatibility-2026-02-19.md  beta-testing-fix-tier17-db-recovery-2026-02-19.md  beta-testing-fix-tier4-run3-5.md  beta-testing-fix-tier6-9-stabilization-2026-02-15.md  beta-testing-fix-tier6-worktree-scope-2026-02-15.md  beta-testing-fix-tier7-merge-integrity.md  beta-testing-fix-tier8-events-replay.md  beta-testing-fix-tier9-reliability-2026-02-15.md  codex-rs-adoption-roadmap-2026-03-06.md  codex-rs-harness-capabilities-exploration-2026-03-06.md  codex-rs-harness-implementation-guide-2026-03-06.md  phase-0-report.md  phase-1-2-retrospective-2026-02-17.md  phase-10-report.md  phase-11-report.md  phase-12-report.md  phase-13-report.md  phase-14-report.md  phase-15-report.md  phase-16-report.md  phase-17-report.md  phase-18-report.md  phase-19-report.md  phase-20-report.md  phase-21-report.md  phase-22-report.md  phase-23-report.md  phase-24-report.md  phase-26-report.md  phase-27-report.md  (+56 more)
ops/roadmap/: phase-1.md  phase-2.md  phase-3.5-interlude-db-migration.md  phase-3.md  phase-4.5-native-runtime-hardening.md  phase-4.7-graph-first-context-manager-plan-2026-03-11.md  phase-4.7-native-harness-context-and-capability-lift.md  phase-4.md  phase-5.md
scripts/: changelog_add.py  main_cli_handler_migrator.py  registry_split_migrator.py  rust_fn_dependency_graph.py
src/: lib.rs  main.rs  server.rs
src/adapters/: mod.rs  (+6 more)
tests/: integration.rs
(+488 files in other folders)
