[package]
name = "hivemind-core"
version = "0.1.54"
edition = "2021"
authors = ["Antonio"]
description = "A structured orchestration system for agentic coding workflows"
license = "MIT"
repository = "https://github.com/Antonio7098/hivemind"
readme = "CRATES.md"
keywords = ["cli", "orchestration", "agents", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "hivemind"

[[bin]]
name = "hivemind"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1.0"
fs2 = "0.4"
dirs = "5"
comfy-table = "7"
tiny_http = "0.12"
crossterm = "0.29"
portable-pty = "0.9"
signal-hook = "0.4"
tempfile = "3"
sha2 = "0.10"
schemars = "0.8"
jsonschema = "0.17"
serde_path_to_error = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
nix = { version = "0.28", features = ["resource", "process"] }
ucp-api = { path = "../unified-content-protocol/crates/ucp-api", version = "0.1.14" }
ucp-graph = { version = "0.1.14", path = "../unified-content-protocol/crates/ucp-graph" }
ucp-codegraph = { version = "0.1.14", path = "../unified-content-protocol/crates/ucp-codegraph" }
ucm-core = { version = "0.1.14", path = "../unified-content-protocol/crates/ucm-core" }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
proptest = "1"

[profile.release]
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
result_large_err = "allow"
assigning_clones = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cloned_instead_of_copied = "allow"
cloned_ref_to_slice_refs = "allow"
default_trait_access = "allow"
field_reassign_with_default = "allow"
format_push_string = "allow"
if_not_else = "allow"
items_after_statements = "allow"
items_after_test_module = "allow"
large_stack_arrays = "allow"
manual_div_ceil = "allow"
manual_let_else = "allow"
manual_pattern_char_comparison = "allow"
map_unwrap_or = "allow"
needless_lifetimes = "allow"
needless_pass_by_value = "allow"
needless_range_loop = "allow"
obfuscated_if_else = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
redundant_pattern_matching = "allow"
ref_option = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unused_self = "allow"
useless_vec = "allow"

[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell", "powershell", "npm"]
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
npm-scope = "@antonio7098"
unix-archive = ".tar.gz"
windows-archive = ".zip"
pr-run-mode = "plan"
release-branch = "main"
create-release = true
install-path = "CARGO_HOME"
install-updater = false
